// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoComponent should render correctly 1`] = `
<div
  className="todo"
>
  <input
    checked={false}
    className="todo__checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="todo__number"
  >
    1
    :
  </span>
  <span
    className="todo__title"
  >
    Title
  </span>
</div>
`;

exports[`TodoComponent should render correctly 2`] = `
<div
  className="todo"
>
  <input
    checked={true}
    className="todo__checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="todo__number"
  >
    0
    :
  </span>
  <span
    className="todo__title"
  >
    Testing
  </span>
</div>
`;
